--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
     <h3>Hasil Pendapatan:</h3>
     <div id="hasil_pendapatan"></div>
 
+    <footer>
+        <p>Disclaimer:</p>
+        <p>This is a fan-made project for educational and entertainment purposes. It is not affiliated with, endorsed by, or supported by Arknights, Hypergryph, or Yostar. All trademarks and copyrighted materials related to Arknights belong to their respective owners. Information provided may not be accurate or up-to-date.</p>
+        <p>Join my Discord: <a href="https://discord.gg/hSqjzEp5u7">Discord</a></p>
+    </footer>
+
     <div id="jumlah_pendapatan"></div>
 </body>
 </html>
