--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Orundum Calculator Arknight</title>
+    <title>Daily Orundum Calculator Arknights</title>
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.css">
@@ -64,4 +64,5 @@
 
     <div id="jumlah_pendapatan"></div>
 </body>
+
 </html>
