menampilkan jumlah pull dan yang dipilih akan disimpan

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     <script src="js/schedule_input.js" defer></script>
 
 
-    <script src="js/save.js" defer></script>
     <script src="js/result.js" defer></script>
+    <script src="js/save.js" defer></script>
 </head>
 <body>
     <header class="header">
         <h1>Daily Orundum Calculator For Arknights</h1>
     </header>
+
     <h3>Saat Ini Dimiliki:</h3>
     <div style="text-align: center;">  
         <div style="display: inline-flex; justify-content: center; margin: 5px;">
@@ -59,7 +60,7 @@
     <footer>
         <p>Disclaimer:</p>
         <p>This is a fan-made project for educational and entertainment purposes. It is not affiliated with, endorsed by, or supported by Arknights, Hypergryph, or Yostar. All trademarks and copyrighted materials related to Arknights belong to their respective owners. Information provided may not be accurate or up-to-date.</p>
-        <p>Join my Discord: <a href="https://discord.gg/hSqjzEp5u7">Discord</a></p>
+        <p>Join My Community: <a href="https://discord.gg/hSqjzEp5u7">Discord</a></p>
     </footer>
 
     <div id="jumlah_pendapatan"></div>
