tambah orundum dari paradox simulation dan originte prime dari episode 1 - 5

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Orundum Calculator Arknights</title>
+    <meta name='description' content='Calculator for Pull Count Arknights, you can know Daily Orundum you can get everyday with this calculation.'>
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.css">
@@ -11,6 +12,7 @@
 
 
     <script src="js/schedule.js"></script>
+    <script src="js/schedule__main_story.js"></script>
     <script src="js/schedule_input.js" defer></script>
 
 
