--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta content='Mas Ayyub Al Fajar' name='author'>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Orundum Calculator Arknights</title>
@@ -69,3 +70,4 @@
 </body>
 
 </html>
+
