Penambahan Free Enhacement Pack

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <script src="js/schedule.js"></script>
     <script src="js/schedule__main_story.js"></script>
+    <script src="js/schedule__enhacement_pack.js"></script>
     <script src="js/schedule_input.js" defer></script>
 
 
