--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <p>Disclaimer:</p>
         <p>This is a fan-made project for educational and entertainment purposes. It is not affiliated with, endorsed by, or supported by Arknights, Hypergryph, or Yostar. All trademarks and copyrighted materials related to Arknights belong to their respective owners. Information provided may not be accurate or up-to-date.</p>
         <p>Join My Community: <a href="https://discord.gg/hSqjzEp5u7">Discord</a></p>
+        <p>Github Source: <a href="https://github.com/SAMBUYYA/daily-orundum-calculator-arknights">Source Page</a></p>
     </footer>
 
     <div id="jumlah_pendapatan"></div>
